[package]
name = "artifical_life_fight"
version = "0.1.0"
edition = "2021"

[dependencies]
notan = "0.9.5"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = 2

